--- a/README
+++ b/README
@@ -6,14 +6,10 @@ Visit us at http://www.metawatch.org
 
 https://github.com/MetaWatchOpenProjects/MWM-for-iPhone/issues
 
-Meta Watch will be keeping this project up to date and periodically releasing new
-stable versions on the Metawatch.org website and on the Apple App Store.
+Meta Watch will be keeping this project up to date and periodically releasing new stable versions on the Metawatch.org website and on the Apple App Store.
 
-Contributing your code to this project is encouraged.
-To contribute your code, you must please fill out and submit a contributor agreement.
-You can find this in the developer section of the metawatch.org website.
+Contributing your code to this project is encouraged. To contribute your code, you must please fill out and submit a contributor agreement. You can find this in the developer section of the metawatch.org website.
+
+If you want your app to share Meta Watch simultaniously with the MWM, stay tuned, this ability will be added soon.
 
 Have fun!
-
-If you are developing other apps connecting with Meta Watch, consider using the class of MWManager 
-and implement delegates by yourself. The class of MWManager will be improved with the time.
